rumbas/src/exam/snapshots/rumbas__exam__examples_examinput__compile_examples-45.snap
---
source: rumbas/src/exam/mod.rs
expression: "&example"
---
type: diagnostic
name:
  content:
    nonjmetext§:
      template_key: template_key
      default_value: ~
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
locales:
  template_key: template_key
  default_value: ~
navigation: "template:template_key"
timing:
  duration_in_seconds: ~
  allow_pause: false
  on_timeout:
    action: warn
    message:
      content: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
  timed_warning:
    action: warn
    message:
      content: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
feedback:
  percentage_needed_to_pass: "template:template_key"
  show_name_of_student: ~
  show_current_marks: ~
  show_maximum_marks: ~
  show_answer_state: ~
  allow_reveal_answer: ~
  review:
    show_score: false
    show_feedback: false
    show_expected_answer: false
    show_advice: false
  advice: ~
  intro: ~
  feedback_messages: ~
question_groups:
  template_key: template_key
  default_value: ~
numbas_settings: "template:template_key"
diagnostic:
  script:
    custom:
      content: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
  objectives: "template:template_key"
  topics: "template:template_key"

