rumbas/src/exam/snapshots/rumbas__exam__examples_examinput__compile_examples-46.snap
---
source: rumbas/src/exam/mod.rs
expression: "&example"
---
type: diagnostic
name:
  content: "file:path/to/file"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
locales: ~
navigation:
  template_key: template_key
  default_value: ~
timing:
  duration_in_seconds: 2
  allow_pause: "template:template_key"
  on_timeout:
    action: warn
    message: "file:path/to/file"
  timed_warning:
    action: warn
    message: "file:path/to/file"
feedback: "template:template_key"
question_groups: ~
numbas_settings:
  template_key: template_key
  default_value: ~
diagnostic:
  script:
    custom: "file:path/to/file"
  objectives:
    template_key: template_key
    default_value: ~
  topics:
    template_key: template_key
    default_value: ~

