rumbas/src/exam/snapshots/rumbas__exam__examples_examinput__compile_examples-6.snap
---
source: rumbas/src/exam/mod.rs
expression: "&example"
---
type: normal
locales: "template:template_key"
name: "template:template_key"
navigation:
  allow_printing: false
  browsing_enabled: "template:template_key"
  can_move_to_previous: "template:template_key"
  can_regenerate: false
  confirm_when_leaving: false
  mode: sequential
  on_leave:
    action: warn_if_not_attempted
    message: "file:path/to/file"
  show_names_of_question_groups: false
  show_results_page: on_completion
  show_steps: false
  show_title_page: false
  start_password: "file:path/to/file"
timing:
  duration_in_seconds: 2
  allow_pause: "template:template_key"
  on_timeout:
    action: warn
    message: "file:path/to/file"
  timed_warning:
    action: warn
    message: "file:path/to/file"
feedback:
  percentage_needed_to_pass: 1.2
  show_name_of_student: "template:template_key"
  show_current_marks: "template:template_key"
  show_maximum_marks: "template:template_key"
  show_answer_state: "template:template_key"
  allow_reveal_answer: "template:template_key"
  review:
    template_key: template_key
    default_value: ~
  advice: "template:template_key"
  intro: "template:template_key"
  feedback_messages: "template:template_key"
question_groups: "template:template_key"
numbas_settings:
  template_key: template_key
  default_value: ~

