rumbas/src/exam/snapshots/rumbas__exam__examples_examinput__compile_examples-9.snap
---
source: rumbas/src/exam/mod.rs
expression: "&example"
---
type: normal
locales: ~
name:
  content: "file:path/to/file"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
navigation:
  allow_printing: false
  browsing_enabled: ~
  can_move_to_previous: ~
  can_regenerate: false
  confirm_when_leaving: false
  mode: sequential
  on_leave:
    action: prevent_if_not_attempted
    message:
      content: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
  show_names_of_question_groups: false
  show_results_page: on_completion
  show_steps: false
  show_title_page: false
  start_password: "file:path/to/file"
timing: "template:template_key"
feedback:
  percentage_needed_to_pass: 1.2
  show_name_of_student: false
  show_current_marks: false
  show_maximum_marks: false
  show_answer_state: false
  allow_reveal_answer: false
  review:
    show_score: false
    show_feedback: false
    show_expected_answer: false
    show_advice: false
  advice:
    content:
      nonjmetext§: "file:path/to/file"
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
  intro:
    content:
      nonjmetext§: "file:path/to/file"
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
  feedback_messages:
    - message: nonjmetext§
      threshold: nonjmetext§
    - message: "template:template_key"
      threshold: "template:template_key"
    - message: ~
      threshold: ~
    - "template:template_key"
question_groups: ~
numbas_settings: "template:template_key"

